修复：车站搜索SQL分组和测试Mock
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>